--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Visual Studio Code - Code Editing. Redefined</title>
-    <link rel="icon" href="/image/logo.png">
+    <link rel="icon" href="image/logo.png">
     <link rel="stylesheet" href="/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="navbar">
-            <img src="/image/logo.png">
+            <img src="image/logo.png">
             <p>Visual Studio Code</p>
             <nav class="navlist">
                 <ul>
@@ -28,7 +28,7 @@
             </nav>
             <div class="searchbar">
                 <input type="search" placeholder="Search Docs">
-                <img src="/image/search.svg">
+                <img src="image/search.svg">
             </div>
             <span>Download</span>
         </div>
@@ -46,7 +46,7 @@
                     <p><span>Web,</span> <span>Insiders edition,</span> or <span>other platforms</span></p>
 
                 </div>
-                <img src="/image/home-screenshot-mac-2x-v2.png">
+                <img src="image/home-screenshot-mac-2x-v2.png">
             </div>
         </div>
         <hr>
@@ -58,51 +58,51 @@
                 </div>
                 <div class="gridbar">
                     <div class="gridcontent">
-                        <img src="/image/language-js.png">
+                        <img src="image/language-js.png">
                         <p>JavaScript</p>
                     </div>
                     <div class="gridcontent">
-                        <img src="/image/language-ts.png">
+                        <img src="image/language-ts.png">
                         <p>TypeScript</p>
                     </div>
                     <div class="gridcontent">
-                        <img src="/image/language-python.png">
+                        <img src="image/language-python.png">
                         <p>Python</p>
                     </div>
                     <div class="gridcontent">
-                        <img src="/image/language-cs.png">
+                        <img src="image/language-cs.png">
                         <p>C#</p>
                     </div>
                     <div class="gridcontent">
-                        <img src="/image/language-cpp.png">
+                        <img src="image/language-cpp.png">
                         <p>C++</p>
                     </div>
                     <div class="gridcontent">
-                        <img src="/image/language-html.png">
+                        <img src="image/language-html.png">
                         <p>HTML</p>
                     </div>
                     <div class="gridcontent">
-                        <img src="/image/language-java.png">
+                        <img src="image/language-java.png">
                         <p>Java</p>
                     </div>
                     <div class="gridcontent">
-                        <img src="/image/language-json.png">
+                        <img src="image/language-json.png">
                         <p>JSON</p>
                     </div>
                     <div class="gridcontent">
-                        <img src="/image/language-php.png">
+                        <img src="image/language-php.png">
                         <p>PHP</p>
                     </div>
                     <div class="gridcontent">
-                        <img src="/image/language-markdown.png">
+                        <img src="image/language-markdown.png">
                         <p>Markdown</p>
                     </div>
                     <div class="gridcontent">
-                        <img src="/image/language-powershell.png">
+                        <img src="image/language-powershell.png">
                         <p>Powershell</p>
                     </div>
                     <div class="gridcontent">
-                        <img src="/image/language-yaml.png">
+                        <img src="image/language-yaml.png">
                         <p>YAML</p>
                     </div>
                 </div>
@@ -115,63 +115,63 @@
                 </div>
                 <div class="gridbar">
                     <div class="gridcontent">
-                        <img src="/image/python-extension.png">
+                        <img src="image/python-extension.png">
                         <div class="textextension">
                             <h3>Python</h3>
                             <p>Adds rich language support for Python</p>
                         </div>
                     </div>
                     <div class="gridcontent">
-                        <img src="/image/copilot-extension.png">
+                        <img src="image/copilot-extension.png">
                         <div class="textextension">
                             <h3>GitHub Copilot</h3>
                         <p>Your AI pair programmer</p>
                         </div>
                     </div>
                     <div class="gridcontent">
-                        <img src="/image/c-extension.png">
+                        <img src="image/c-extension.png">
                         <div class="textextension">
                             <h3>C/C++</h3>
                             <p>Adds rich language support for C/C++</p>
                         </div>
                     </div>
                     <div class="gridcontent">
-                        <img src="/image/jupyter-extension.png">
+                        <img src="image/jupyter-extension.png">
                         <div class="textextension">
                             <h3>Jupyter</h3>
                             <p>Language support for Jupyter Notebooks</p>
                         </div>
                     </div>
                     <div class="gridcontent">
-                        <img src="/image/gitlens-extension.png">
+                        <img src="image/gitlens-extension.png">
                         <div class="textextension">
                             <h3>GitLens</h3>
                             <p>Superchage your Git experience</p>
                         </div>
                     </div>
                     <div class="gridcontent">
-                        <img src="/image/prettier-extension.png">
+                        <img src="image/prettier-extension.png">
                         <div class="textextension">
                             <h3>Prettier</h3>
                             <p>A code formatter for consistent styling</p>
                         </div>
                     </div>
                     <div class="gridcontent">
-                        <img src="/image/github-pull-requests-extension.png">
+                        <img src="image/github-pull-requests-extension.png">
                         <div class="textextension">
                             <h3>GitHub Codespaces</h3>
                             <p>Fully configured dev environments in the cloud</p>
                         </div>
                     </div>
                     <div class="gridcontent">
-                        <img src="/image/github-pull-requests-extension.png">
+                        <img src="image/github-pull-requests-extension.png">
                         <div class="textextension">
                             <h3>GitHub Pull Requests</h3>
                             <p>Collaborate on issues and pull requests</p>
                         </div>
                     </div>
                     <div class="gridcontent">
-                        <img src="/image/remote-extension.png">
+                        <img src="image/remote-extension.png">
                         <div class="textextension">
                             <h3>Remote Development</h3>
                             <p>Open folders in a container on a remote machine</p>
@@ -183,7 +183,7 @@
             <div class="boxtext3">
                 <div class="text">
                 </div>
-                <img src="/image/swimlane-copilot.png">
+                <img src="image/swimlane-copilot.png">
             </div>
         </div>  
     </main>
